# ace_prototype

./: .dockerignore  .gitignore  Dockerfile  MAP.md  README.md  map.py  requirements.txt  setup.py  start.py
network/: .dockerignore  Dockerfile  NETWORK.md  pyproject.toml
network/kb/: network_config.yaml  network_deployment.yaml  network_service.yaml
network/src/: network_diagnostics.py  network_main.py  network_start.py  northbound_bus.py  southbound_bus.py
network/src/clients/: novelai_cli.py  terminal_cli.py  web_cli.py
network/src/connections/: CONNECTIONS.md  kafka_connection.py
network/src/connections/http_connections/: http_conn.py
network/src/connections/queue_connections/: kafka_conn.py
network/src/error_handling/: app_error_handler.py  client_error_handler.py  connection_error_handler.py  gateway_error_handler.py  network_error_handler.py
network/src/gateway/: GATEWAY.md  api_routes.py  gateway_main.py
network/src/gateway/clients/: base_cli.py  huggingface_cli.py  terminal_cli.py
network/src/gateway/clients/comm_clients/: comm_cli.py  discord_cli.py
network/src/gateway/clients/lang_clients/: lang_cli.py  novelai_cli.py
network/src/gateway/clients/sys_clients/: sys_cli.py  terminal_cli.py
network/src/gateway/clients/web_clients/: dashboard_cli.py  web_cli.py
network/src/gateway/handlers/: client_handler.py  gateway_handler.py  route_handler.py
network/src/gateway/llm/: llm_client.py
network/src/gateway/registries/: client_registry.py  route_registry.py
network/src/logs/: nb_logging.py
network/tests/: test_novelai.py
(+153 files in other folders)
